[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NagParser"
version = "0.0.50"
description = "Parse realtime Nagios Data from status.dat and objects.cache, do useful stuff with it"
readme = "README.rst"
license = {text = "GPLv3"}
authors = [
    {name = "Andreas Thienemann", email = "andreas@bawue.net"},
    {name = "Matt Kennedy"},
    {name = "Zeb Palmer"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/ixs/NagParser"

[project.optional-dependencies]
# Development dependencies (includes testing)
dev = [
    "pytest>=7.0.0,<9.0.0",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
include = ["nagparser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*Tests.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
